[gd_scene load_steps=14 format=3 uid="uid://umft1vb3u8io"]

[ext_resource type="Script" path="res://Game/Menu/Menus/settings.gd" id="1_a2klg"]
[ext_resource type="Shader" path="res://Game/Menu/Shader/blur.gdshader" id="2_fdmk4"]
[ext_resource type="Theme" uid="uid://dv4qrnr0ds2w6" path="res://Game/Menu/theme/menu.tres" id="3_urlqi"]
[ext_resource type="Script" path="res://Game/Menu/SFX/btn_sfx.gd" id="4_ihtxr"]
[ext_resource type="Script" path="res://Game/Menu/Menus/button.gd" id="4_pjjri"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pr8yn"]
shader = ExtResource("2_fdmk4")
shader_parameter/lod = 2.639
shader_parameter/mix_percentage = 0.6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cnnqk"]
bg_color = Color(0.742222, 0.574712, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhp11"]
bg_color = Color(0.705882, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ovq4"]
bg_color = Color(0.956863, 0, 0, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 7.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="Animation" id="Animation_lroft"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ofmmd"]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k5h73"]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h1kiq"]
_data = {
"RESET": SubResource("Animation_lroft"),
"close": SubResource("Animation_ofmmd"),
"open": SubResource("Animation_k5h73")
}

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2klg")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pr8yn")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="paused" type="Label" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 43.0
offset_right = 278.0
offset_bottom = 93.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 38
text = "[PARAMETRES]"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="buttons" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.0347222
anchor_top = 0.594136
anchor_right = 0.311632
anchor_bottom = 0.921296
metadata/_edit_use_anchors_ = true

[node name="audio" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0470219
anchor_top = 0.0518868
anchor_right = 0.959248
anchor_bottom = 0.212264
offset_bottom = 2.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 23
text = "CREDITS/AUDIO"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="display" type="Button" parent="buttons"]
layout_mode = 0
anchor_left = 0.0470219
anchor_top = 0.231132
anchor_right = 0.959248
anchor_bottom = 0.391509
offset_bottom = 2.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 23
text = "AFFICHAGE"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="graphics" type="Button" parent="buttons"]
layout_mode = 0
anchor_left = 0.0470219
anchor_top = 0.410377
anchor_right = 0.959248
anchor_bottom = 0.570755
offset_bottom = 2.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 23
text = "GRAPHIQUE"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="controls" type="Button" parent="buttons"]
layout_mode = 0
anchor_left = 0.0470219
anchor_top = 0.59434
anchor_right = 0.959248
anchor_bottom = 0.754717
offset_bottom = 2.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 23
text = "CONTROLES"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="language" type="Button" parent="buttons"]
layout_mode = 0
anchor_left = 0.0470219
anchor_top = 0.773585
anchor_right = 0.959248
anchor_bottom = 0.933962
offset_bottom = 2.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 23
text = "LANGAGE"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="back" type="Button" parent="buttons"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
offset_left = 997.0
offset_top = 227.0
offset_right = 1081.11
offset_bottom = 261.0
theme = ExtResource("3_urlqi")
theme_override_colors/font_hover_color = Color(0.566298, 0.566298, 0.566298, 1)
theme_override_font_sizes/font_size = 22
text = "RETOUR"
flat = true

[node name="setting" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_right = 1084.0
offset_bottom = 585.0

[node name="lineleft" type="VSeparator" parent="setting"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.293
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.2
offset_top = -3.40501
offset_right = -696.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="lineright" type="VSeparator" parent="setting"]
layout_mode = 0
offset_left = 696.0
offset_top = 175.0
offset_right = 700.0
offset_bottom = 621.0

[node name="audio" type="Control" parent="setting"]
anchors_preset = 0
offset_left = 12.0
offset_right = 704.0
offset_bottom = 393.0

[node name="example_div" type="Label" parent="setting/audio"]
layout_mode = 0
offset_left = 276.0
offset_top = 1.0
offset_right = 440.0
offset_bottom = 56.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 40
text = "CREDITS"
vertical_alignment = 1

[node name="section_label" type="Label" parent="setting/audio"]
layout_mode = 0
offset_top = 418.0
offset_right = 692.0
offset_bottom = 492.0
theme = ExtResource("3_urlqi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="section_label2" type="Label" parent="setting/audio"]
layout_mode = 0
offset_top = 418.0
offset_right = 692.0
offset_bottom = 492.0
theme = ExtResource("3_urlqi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="example_div2" type="Label" parent="setting/audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.29
anchor_right = 0.257
anchor_bottom = 1.16
offset_left = 0.159999
offset_top = 0.0299911
offset_right = 399.156
offset_bottom = 45.12
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 40
text = "Grabpack by @Detectpika
Map by @MobStageStudio

            LINKS

https://www.youtube.com/
@detectpika

https://www.youtube.com/
@MobStageStudio"
vertical_alignment = 1

[node name="LabelVolume" type="Label" parent="setting/audio"]
layout_mode = 0
offset_left = 2.0
offset_top = 516.0
offset_right = 61.0
offset_bottom = 539.0
text = "Volume
"

[node name="Mute" type="Label" parent="setting/audio"]
layout_mode = 0
offset_left = 2.0
offset_top = 565.0
offset_right = 61.0
offset_bottom = 588.0
text = "Mute
"

[node name="volume" type="HSlider" parent="setting/audio"]
layout_mode = 0
offset_top = 543.0
offset_right = 593.0
offset_bottom = 559.0
theme_override_styles/slider = SubResource("StyleBoxFlat_cnnqk")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_nhp11")

[node name="CheckBox" type="CheckBox" parent="setting/audio"]
layout_mode = 0
offset_top = 596.0
offset_right = 24.0
offset_bottom = 620.0
theme_override_styles/normal = SubResource("StyleBoxFlat_7ovq4")

[node name="display" type="Control" parent="setting"]
visible = false
anchors_preset = 0
offset_left = 4.0
offset_top = 93.0
offset_right = 696.0
offset_bottom = 486.0

[node name="example_div" type="Label" parent="setting/display"]
layout_mode = 0
offset_right = 539.0
offset_bottom = 55.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 40
text = "Resolution"
vertical_alignment = 1

[node name="section_label" type="Label" parent="setting/display"]
layout_mode = 0
offset_top = 418.0
offset_right = 692.0
offset_bottom = 492.0
theme = ExtResource("3_urlqi")
text = "PARAMETRES D'AFFICHAGE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resolution" type="OptionButton" parent="setting/display"]
layout_mode = 0
offset_left = 8.0
offset_top = 94.0
offset_right = 40.0
offset_bottom = 114.0
item_count = 3
popup/item_0/text = "1152x648"
popup/item_1/text = "2060x1080"
popup/item_1/id = 1
popup/item_2/text = "800x500"
popup/item_2/id = 2

[node name="graphics" type="Control" parent="setting"]
visible = false
anchors_preset = 0
offset_left = 4.0
offset_top = 93.0
offset_right = 696.0
offset_bottom = 486.0

[node name="example" type="Button" parent="setting/graphics"]
layout_mode = 0
offset_top = 55.0
offset_right = 696.0
offset_bottom = 98.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 22
text = "EXEMPLE BOUTON GRAPHIQUES"
alignment = 0

[node name="example_div" type="Label" parent="setting/graphics"]
layout_mode = 0
offset_right = 539.0
offset_bottom = 55.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 40
text = "Exemple Section"
vertical_alignment = 1

[node name="section_label" type="Label" parent="setting/graphics"]
layout_mode = 0
offset_top = 418.0
offset_right = 692.0
offset_bottom = 492.0
theme = ExtResource("3_urlqi")
text = "PARAMETRES GRAPHIQUE BIENTOT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="controls" type="Control" parent="setting"]
visible = false
anchors_preset = 0
offset_left = 4.0
offset_top = 93.0
offset_right = 696.0
offset_bottom = 486.0

[node name="example_div" type="Label" parent="setting/controls"]
layout_mode = 0
offset_right = 692.0
offset_bottom = 55.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 40
text = "MOUVEMENT"
vertical_alignment = 1

[node name="item1" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 55.0
offset_right = 692.0
offset_bottom = 86.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "AVANCER: Z"
vertical_alignment = 1

[node name="item2" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 86.0
offset_right = 692.0
offset_bottom = 117.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "GAUCHE: Q"
vertical_alignment = 1

[node name="item3" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 117.0
offset_right = 692.0
offset_bottom = 148.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "RECULER: S"
vertical_alignment = 1

[node name="item4" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 148.0
offset_right = 692.0
offset_bottom = 179.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "DROITE: D
"
vertical_alignment = 1

[node name="item5" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 179.0
offset_right = 692.0
offset_bottom = 210.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "SAUTER: BARE D'ESPACE"
vertical_alignment = 1

[node name="item6" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 210.0
offset_right = 692.0
offset_bottom = 241.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "S'ACROUPIR: CTRL"
vertical_alignment = 1

[node name="item7" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 241.0
offset_right = 692.0
offset_bottom = 272.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "GRABPACK GAUCHE: SOURIS GAUCHE"
vertical_alignment = 1

[node name="item8" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 272.0
offset_right = 692.0
offset_bottom = 303.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "GRABPACK DROITE: SOURIS DROITE"
vertical_alignment = 1

[node name="item9" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 303.0
offset_right = 692.0
offset_bottom = 334.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "CHANGER MAINS: 1, 2, 3, 4, ²"
vertical_alignment = 1

[node name="item10" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 334.0
offset_right = 692.0
offset_bottom = 365.0
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 20
text = "PAUSE: ECHAP"
vertical_alignment = 1

[node name="section_label" type="Label" parent="setting/controls"]
layout_mode = 0
offset_top = 418.0
offset_right = 692.0
offset_bottom = 492.0
theme = ExtResource("3_urlqi")
text = "CONTROLES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="language" type="Control" parent="setting"]
visible = false
anchors_preset = 0
offset_left = 4.0
offset_top = 93.0
offset_right = 696.0
offset_bottom = 486.0

[node name="example_div" type="Label" parent="setting/language"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_bottom = -141.5
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 40
text = "LANGUE"
vertical_alignment = 1

[node name="section_label2" type="Label" parent="setting/language"]
layout_mode = 0
offset_left = -196.0
offset_top = 115.0
offset_right = 496.0
offset_bottom = 189.0
theme = ExtResource("3_urlqi")
text = "Langues Disponibles"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="setting/language"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.047
anchor_top = 0.224
anchor_right = 0.433
anchor_bottom = 0.317
offset_left = -24.524
offset_top = -0.0320053
offset_right = 0.121979
offset_bottom = 0.0490036
theme = ExtResource("3_urlqi")
theme_override_font_sizes/font_size = 23
text = "Changer la langue"
alignment = 0
script = ExtResource("4_pjjri")

[node name="Label" type="Label" parent="setting/language"]
layout_mode = 0
offset_left = 10.0
offset_top = 183.0
offset_right = 106.0
offset_bottom = 234.0
text = "FR: Français
EN: English
ES: Español
GE: Deutsch
JA: 日本
KO:  한국인
IT: Italiano
RU: Русский"

[node name="ButtonSFXPlayer" type="Node" parent="."]
script = ExtResource("4_ihtxr")
root_path = NodePath("../buttons")

[node name="ButtonSFXPlayer2" type="Node" parent="."]
script = ExtResource("4_ihtxr")
root_path = NodePath("../setting")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h1kiq")
}

[connection signal="pressed" from="buttons/audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="buttons/display" to="." method="_on_display_pressed"]
[connection signal="pressed" from="buttons/graphics" to="." method="_on_graphics_pressed"]
[connection signal="pressed" from="buttons/controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="buttons/language" to="." method="_on_language_pressed"]
[connection signal="pressed" from="buttons/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="setting/audio/volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="setting/audio/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="setting/display/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="button_up" from="setting/language/Button" to="setting/language/Button" method="_on_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
